--- a/src/index.sass
+++ b/src/index.sass
@@ -25,7 +25,11 @@ footer, header, hgroup, menu, nav, section
 
 body
   line-height: 1
-
+  font-family: "Montserrat", sans-serif
+  font-optical-sizing: auto
+  font-weight: 400
+  font-style: normal 
+   
 ol, ul
   list-style: none
 
