feat: implement useEffect and useState hooks

--- a/src/components/chip/chip.sass
+++ b/src/components/chip/chip.sass
@@ -8,6 +8,7 @@
     width: fit-content
     align-items: center
     gap: spacing.$spacing-2xs
+    font-size: spacing.$spacing-2xs
     &--primary
         @extend .chip
         color: map-get(colors.$greyscale, 200)
@@ -33,12 +34,12 @@
         border-radius: spacing.$spacing-2xs
 .size
     &--s
-        height: spacing.$spacing-l       
+        height: spacing.$spacing-m      
         padding-left: spacing.$spacing-xs
         padding-right: spacing.$spacing-xs
         font-size: spacing.$spacing-xs
     &--m     
-        height: spacing.$spacing-l   
+        height: spacing.$spacing-m   
         padding-left: spacing.$spacing-xs
         padding-right: spacing.$spacing-xs      
         padding-top: spacing.$spacing-2xs /2  
