--- a/src/components/card/card.sass
+++ b/src/components/card/card.sass
@@ -5,10 +5,10 @@
    border-width: spacing.$spacing-2xs /4
    border-style: solid
    padding: spacing.$spacing-2xl /3.1
-   color: map-get(colors.$royal-blue, 500)
-   display: inline-block
+   display: block
    border-radius: spacing.$spacing-2xs
-
+   width: 100% 
+   height: 100%
    &--default
       @extend .card
       border-color: map-get(colors.$greyscale, 200)
