--- a/src/components/table/table.sass
+++ b/src/components/table/table.sass
@@ -10,16 +10,18 @@
 .row
     display: flex
     justify-content: space-around
+    align-items: center
 .item
     display: flex
     justify-content: left
     width: 100%
     height: 100%
-    padding: 8px
-    font-size: 10px
+    padding: 5px
+    font-size: 8px
 .display
     width: 100%
     height: 100%
+
 .linea-divisoria
     border-bottom: 1px solid map-get(colors.$greyscale, 200)
 .bold
