feat: implement React Query to fetch data from API

--- a/src/index.sass
+++ b/src/index.sass
@@ -23,8 +23,10 @@ time, mark, audio, video, button
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section
   display: block
-
+html
+  height: 100%
 body
+  height: 100%
   line-height: 1
   font-family: "Montserrat", sans-serif
   font-optical-sizing: auto
