--- a/src/modules/home/component/rigntSection/rigntSection.sass
+++ b/src/modules/home/component/rigntSection/rigntSection.sass
@@ -42,9 +42,12 @@
 .card-mini
     display: flex
     width: 40%
+    gap: 10px
 .content-card-mini
     display: flex
     flex-direction: column
+    justify-content: center
+    height: 100%
     gap: 5px
     flex: 1
 .inline-content
