Add React Router for client-side routing

--- a/src/components/sidebar/sidebar.sass
+++ b/src/components/sidebar/sidebar.sass
@@ -6,6 +6,7 @@
     display: flex
     justify-content: space-between
     gap: spacing.$spacing-m
+    padding: spacing.$spacing-xs
     color: map-get(colors.$greyscale, 700)
 .disple-Toggle
     display: flex
