--- a/src/index.sass
+++ b/src/index.sass
@@ -23,7 +23,7 @@ time, mark, audio, video, button
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section
   display: block
-html
+html, body, #root
   height: 100%
 body
   height: 100%
