feat: display Rick and Morty API data in table component

--- a/src/components/chip/chip.sass
+++ b/src/components/chip/chip.sass
@@ -44,3 +44,8 @@
         padding-right: spacing.$spacing-xs      
         padding-top: spacing.$spacing-2xs /2  
         font-size: spacing.$spacing-s
+.active
+    background-color: map-get(colors.$royal-blue, 50)
+    border-color: map-get(colors.$royal-blue, 200)
+    color: map-get(colors.$royal-blue, 500)       
+    
