--- a/src/modules/models/component/title/title.sass
+++ b/src/modules/models/component/title/title.sass
@@ -3,23 +3,27 @@
 
 .title-wrapper    
     display: flex
-    padding-top: 10px
-    padding-left:  15px
-    padding-right: 15px
+    padding-top: spacing.$spacing-l /2 
+    padding-left: spacing.$spacing-l /2 
+    padding-right: spacing.$spacing-l /2 
     flex-direction: column
-    gap: 25px
+    gap: spacing.$spacing-xl
 .title-header
     display: flex
-    gap: 5px
-    color: map-get(colors.$royal-blue, 700) 
+    align-items: center
+    gap: spacing.$spacing-xs
+    color: map-get(colors.$royal-blue, 700)
+    font-size: spacing.$spacing-l /2 
     span
-        color: map-get(colors.$greyscale, 700) 
+        color: map-get(colors.$greyscale, 700)
+        font-size: spacing.$spacing-m
+        font-weight: bold   
 .chip-wrapper
     display: flex
-    gap: 5px
+    gap: spacing.$spacing-xs
 .header-content
     display: flex
     justify-content: space-between
 .header-content-right
     display: flex
-    gap: 10px
+    gap: spacing.$spacing-l /2
