Update table layout styles for correct size rendering

--- a/src/modules/models/component/table/table.sass
+++ b/src/modules/models/component/table/table.sass
@@ -1,6 +1,7 @@
 .table-container
-    max-height: 400px
+    flex: 1
     overflow-y: auto
     max-width: 100%
     overflow-x: auto
-
+    height: 100%
+    
