feat: add reusable Modal component

--- a/src/modules/models/component/title/title.sass
+++ b/src/modules/models/component/title/title.sass
@@ -7,7 +7,7 @@
     padding-left: spacing.$spacing-l /2 
     padding-right: spacing.$spacing-l /2 
     flex-direction: column
-    gap: spacing.$spacing-xl
+    gap: spacing.$spacing-m
 .title-header
     display: flex
     align-items: center
@@ -21,9 +21,12 @@
 .chip-wrapper
     display: flex
     gap: spacing.$spacing-xs
+    align-items: center
 .header-content
     display: flex
     justify-content: space-between
 .header-content-right
     display: flex
+    justify-content: center
+    align-items: center
     gap: spacing.$spacing-l /2
