--- a/src/components/select/select.sass
+++ b/src/components/select/select.sass
@@ -5,6 +5,6 @@
   display: flex
   flex-direction: column
   gap: spacing.$spacing-2xs
-  font-size: 14px
-  max-width: 30%
-  padding: spacing.$spacing-xs
+  font-size: spacing.$spacing-xs
+  width: 100% 
+  max-width: 200px
