feat: create page for module creation

--- a/src/components/input/input.sass
+++ b/src/components/input/input.sass
@@ -5,13 +5,14 @@
     display: flex
     flex-direction: column
     gap: spacing.$spacing-xs
-    max-width: 30%
+    width: 100%
     padding: spacing.$spacing-s
     font-size: spacing.$spacing-xs
     .placeHolder-wrapper
         input
             font-size: spacing.$spacing-xs
             padding: spacing.$spacing-xs/2 
+            width: 100%
             border: 1px solid map-get(colors.$greyscale, 200)
             border-radius: spacing.$spacing-xs/2
             transition: border-color 0.2s, background-color 0.2s
