--- a/src/components/select/select.sass
+++ b/src/components/select/select.sass
@@ -3,8 +3,8 @@
 
 .select-wrapper
   display: flex
+  padding: 10px
   flex-direction: column
   gap: spacing.$spacing-2xs
   font-size: spacing.$spacing-xs
   width: 100% 
-  max-width: 200px
