--- a/src/modules/createmodels/form/form.sass
+++ b/src/modules/createmodels/form/form.sass
@@ -2,6 +2,8 @@
     display: flex
     flex-direction: column
     gap: 10px
+    width: 100%
+    height: 100%   
 .form-content
     display: flex         
     gap: 30px
@@ -10,9 +12,15 @@
     display: flex         
     flex-direction: column
     width: 100%
-    gap: 10px
 .form-left
     display: flex         
     flex-direction: column
     width: 100%
     gap: 20px
+    height: 100%  
+.footer-wrapper
+    display: flex
+    justify-content: flex-end
+    gap: 10px
+    padding: 10px
+    width: 100%
